--- a/style/sass/animations/_animations.scss
+++ b/style/sass/animations/_animations.scss
@@ -148,7 +148,7 @@
 }
 
 .meals {
-  overflow: hidden;
+  // overflow: hidden;
   .checkContainer {
     animation: slideToTheRight 0.5s;
   }
@@ -163,6 +163,19 @@
   &:hover .itemPrice {
     animation: slideToTheLeft 0.5s;
     animation-fill-mode: forwards;
+  }
+  &:hover .articleTitleAndDescriptionContainer {
+    animation: reduceWidth 0.5s;
+    animation-fill-mode: forwards;
+  }
+}
+
+@keyframes reduceWidth {
+  from {
+    width: 100%;
+  }
+  to {
+    width: calc( 100% - 100px );
   }
 }
 
